--- a/views/school/courses/videos/addVideo.ejs
+++ b/views/school/courses/videos/addVideo.ejs
@@ -1,40 +1,166 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Video</title>
-</head>
-<body>
-    <button onclick="history.back()">Go Back</button>
-    <form action="/admin/dashboard">
-        <input type="submit" value="Dashboard">
-    </form>
-    <h1>Add New Video</h1>
-    <p style="color: red;"><%= msg %></p>
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="/images/icons/favicon.ico" />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css" />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/css-hamburgers/hamburgers.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/animsition/css/animsition.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/select2/select2.min.css"
+    />
+    <!--===============================================================================================-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/vendor/daterangepicker/daterangepicker.css"
+    />
+    <!--===============================================================================================-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css" />
 
-    <form action="/addVideo" method="POST" enctype="multipart/form-data">
-        <label for="crsID">Course: </label>
-        <% if (courses.length > 0) { %>
-            <select name="crsID" id="crsID">
-                <% courses.forEach(course => { %>
-                    <option value="<%= course._id %>"><%= course.Name %></option>
+    <!--===============================================================================================-->
+ 
+  </head>
+  <body>
+    <div class="limiter">
+      <div class="container-login100">
+        <div class="wrap-login100">
+          <p style="color: red"><%= msg %></p>
+          <button onclick="history.back()" style="padding: 10px">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30"
+              height="30"
+              fill="currentColor"
+              class="bi bi-arrow-left"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"
+              />
+            </svg>
+          </button>
+          <form action="/addVideo" method="POST" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+
+            <span class="login100-form-title"> Add New Video </span>
+
+
+
+            <div class="wrap-input100 validate-input m-b-16">
+                <% if (courses.length > 0) { %>
+              <select
+                class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none"
+                name="crsID"
+                id="crsID"
+              >
+              <% courses.forEach(course => { %>
+                <option>Choose a Course</option>
+                <option value="<%= course._id %>"><%= course.Name %></option>
                 <% }) %>
-            </select>
-        <% } else { %>
-            <select name="crsID" id="crsID">
+              </select>
+              <% } else { %>
+              <select name="crsID" id="crsID">
                 <option value="" disabled>No Available Course</option>
-            </select>
-        <% } %>
-        <br>
-        <label for="Name">Video Title: </label>
-        <input type="text" name="Name" id="Name">
-        <br>
-        <label for="Video">Video File: </label>
-        <input type="file" name="Video" id="Video">
-        <br>
-        <input type="submit" value="Add Video">
-    </form>
-</body>
+              </select>
+              <% } %>
+            </div>
+            <br />
+            <div
+              class="wrap-input100 validate-input m-b-16"
+              data-validate="Please enter Note Title"
+            >
+              <input
+                type="text"
+                name="Name"
+                id="Name"
+                placeholder="Video Title"
+              />
+              <span class="focus-input100"></span>
+            </div>
+            <br /><br />
+
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Please enter note file"
+            >
+              <input
+                type="file"
+                name="Video"
+                id="Video"
+                placeholder="Video File"
+              />
+              <span class="focus-input100"></span>
+            </div>
+            <br /><br />
+            <div
+              class="container-login100-form-btn"
+              style="padding-bottom: 40px"
+            >
+              <button class="login100-form-btn">
+                <input type="submit" value="Add Video" />
+              </button>
+            </div>
+          </form>
+      
+        </div>
+      </div>
+    </div>
+
+  
+
+  
+    <!--===============================================================================================-->
+    <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="/vendor/bootstrap/js/popper.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="/vendor/daterangepicker/moment.min.js"></script>
+    <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="/js/main.js"></script>
+  </body>
 </html>
