--- a/views/school/dashboard.ejs
+++ b/views/school/dashboard.ejs
@@ -1,72 +1,251 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
-</head>
-<body>
-    <button onclick="history.back()">Go Back</button>
-    <h1>Dashboard</h1>
+<html lang="en" class="antialiased">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Dashboard</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link
+      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel=" stylesheet"
+    />
+    <!--Replace with your tailwind.css once created-->
 
-    <form action="/createCourse">
-        <input type="submit" value="Create Course">
-    </form>
+    <!--Regular Datatables CSS-->
+    <link
+      href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <!--Responsive Extension Datatables CSS-->
+    <link
+      href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"
+      rel="stylesheet"
+    />
 
-    <h1>Courses</h1>
+    <style>
+      /*Overrides for Tailwind CSS */
 
-    <div class="courses">
+      /*Form fields*/
+      .dataTables_wrapper select,
+      .dataTables_wrapper .dataTables_filter input {
+        color: #4a5568;
+        /*text-gray-700*/
+        padding-left: 1rem;
+        /*pl-4*/
+        padding-right: 1rem;
+        /*pl-4*/
+        padding-top: 0.5rem;
+        /*pl-2*/
+        padding-bottom: 0.5rem;
+        /*pl-2*/
+        line-height: 1.25;
+        /*leading-tight*/
+        border-width: 2px;
+        /*border-2*/
+        border-radius: 0.25rem;
+        border-color: #edf2f7;
+        /*border-gray-200*/
+        background-color: #edf2f7;
+        /*bg-gray-200*/
+      }
+
+      /*Row Hover*/
+      table.dataTable.hover tbody tr:hover,
+      table.dataTable.display tbody tr:hover {
+        background-color: #ebf4ff;
+        /*bg-indigo-100*/
+      }
+
+      /*Pagination Buttons*/
+      .dataTables_wrapper .dataTables_paginate .paginate_button {
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Pagination Buttons - Current selected */
+      .dataTables_wrapper .dataTables_paginate .paginate_button.current {
+        color: #fff !important;
+        /*text-white*/
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+          0 1px 2px 0 rgba(0, 0, 0, 0.06);
+        /*shadow*/
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        background: #667eea !important;
+        /*bg-indigo-500*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Pagination Buttons - Hover */
+      .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+        color: #fff !important;
+        /*text-white*/
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+          0 1px 2px 0 rgba(0, 0, 0, 0.06);
+        /*shadow*/
+        font-weight: 700;
+        /*font-bold*/
+        border-radius: 0.25rem;
+        /*rounded*/
+        background: #667eea !important;
+        /*bg-indigo-500*/
+        border: 1px solid transparent;
+        /*border border-transparent*/
+      }
+
+      /*Add padding to bottom border */
+      table.dataTable.no-footer {
+        border-bottom: 1px solid #e2e8f0;
+        /*border-b-1 border-gray-300*/
+        margin-top: 0.75em;
+        margin-bottom: 0.75em;
+      }
+
+      /*Change colour of responsive icon*/
+      table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:before,
+      table.dataTable.dtr-inline.collapsed
+        > tbody
+        > tr
+        > th:first-child:before {
+        background-color: #667eea !important;
+        /*bg-indigo-500*/
+      }
+    </style>
+  </head>
+
+  <body class="leading-normal tracking-wider text-gray-900 bg-gray-100">
+    <!--Container-->
+    <div class="container w-full px-2 mx-auto md:w-4/5 xl:w-3/5">
+        <h1 style="text-align: center; padding: 20px; font-size: 50px;">Admin DashBoard</h1>
+      <!--Title-->
+      <h1
+        class="flex items-center px-2 py-8 font-sans text-xl font-bold text-red-500 break-normal md:text-2xl"
+      >
+        Courses
+      </h1>
+
+      <form action="/createCourse">
+        <input type="submit" value="Create Course" />
+      </form>
+
+      <!--Card-->
+      <div id="recipients" class="p-8 mt-6 bg-white rounded shadow lg:mt-0">
         <% if (courses.length > 0) { %>
-            <table>
-                <tr>
-                    <th>Course Code</th>
-                    <th>Course Name</th>
-                    <th>Course Price</th>
-                    <th>Actions</th>
-                </tr>
-                <% courses.forEach(course => { %>
-                    <tr>
-                        <td><%= course.CourseCode %></td>
-                        <td><%= course.Name %></td>
-                        <td><%= course.Price %></td>
-                        <td>
-                                <a href="/viewCourse/<%= course._id %>">View</a>
-                                <a href="/editCourse/<%= course._id %>">Edit</a>
-                                <a href="/deleteCourse/<%= course._id %>">Delete</a>
-                        </td>
-                    </tr>
-                <% }) %>
-            </table>
+        <table
+          id="example"
+          class="stripe hover"
+          style="width: 100%; padding-top: 1em; padding-bottom: 1em"
+        >
+          <thead>
+            <tr>
+              <th data-priority="1">Course Code</th>
+              <th data-priority="2">Course Name</th>
+              <th data-priority="3">Course Price</th>
+              <th data-priority="4">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% courses.forEach(course => { %>
+            <tr>
+              <td><%= course.CourseCode %></td>
+              <td><%= course.Name %></td>
+              <td><%= course.Price %></td>
+              <td>
+                <a href="/viewCourse/<%= course._id %>">View ||</a>
+                <a href="/editCourse/<%= course._id %>" style="color: blue">
+                  Edit <span style="color: black">||</span></a
+                >
+                <a href="/deleteCourse/<%= course._id %>" style="color: red"
+                  >Delete</a
+                >
+              </td>
+            </tr>
+          </tbody>
+          <% }) %>
+        </table>
         <% } else { %>
-            <p>There are no Courses</p>
+        <p>There are no Courses</p>
         <% } %>
+      </div>
+      <!--/Card-->
     </div>
+    <!--/container-->
 
-    <h1>Students</h1>
+    <!--Container 2-->
+    <div class="container w-full px-2 mx-auto md:w-4/5 xl:w-3/5">
+      <!--Title-->
+      <h1
+        class="flex items-center px-2 py-8 font-sans text-xl font-bold text-red-500 break-normal md:text-2xl"
+      >
+        Students
+      </h1>
 
-    <div>
+      <!--Card-->
+      <div id="recipients" class="p-8 mt-6 bg-white rounded shadow lg:mt-0">
         <% if (students.length > 0) { %>
-            <table>
-                <tr>
-                    <th>Full Name</th>
-                    <th>Phone Number</th>
-                    <th>Actions</th>
-                </tr>
-                <% students.forEach(student => { %>
-                    <tr>
-                        <td><%= student.Fname %> <%= student.Lname %></td>
-                        <td><%= student.PhnNo %></td>
-                        <td>
-                            <a href="/student/<%= student._id %>/main">View</a>
-                            <a href="/deleteStudent/<%= student._id %>">Delete</a>
-                        </td>
-                    </tr>
-                <% }) %>
-            </table>
+        <table
+          id="example"
+          class="stripe hover"
+          style="width: 100%; padding-top: 1em; padding-bottom: 1em"
+        >
+          <thead>
+            <tr>
+              <th data-priority="1">Full Name</th>
+              <th data-priority="2">Phone Number</th>
+              <th data-priority="3">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% students.forEach(student => { %>
+            <tr>
+              <td><%= student.Fname %> <%= student.Lname %></td>
+              <td><%= student.PhnNo %></td>
+              <td>
+                <a href="/student/<%= student._id %>/main">View ||</a>
+                <a href="/deleteStudent/<%= student._id %>" style="color: red"
+                  >Delete</a
+                >
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+
         <% } else { %>
-            <p>There are no Students</p>
+        <p>There are no Students</p>
         <% } %>
+      </div>
+      <!--/Card-->
     </div>
-</body>
+    <!--/container-->
+
+    <!-- jQuery -->
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+    ></script>
+
+    <!--Datatables -->
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        var table = $("#example")
+          .DataTable({
+            responsive: true,
+          })
+          .columns.adjust()
+          .responsive.recalc();
+      });
+    </script>
+  </body>
 </html>
