--- a/views/school/login.ejs
+++ b/views/school/login.ejs
@@ -1,25 +1,94 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login as Admin</title>
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+    <title>Login</title>
+     <!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link href="/dist/output.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/css/util.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+
+    <!--===============================================================================================-->
 </head>
 <body>
-    <p style="color: red;"><%= emailMsg %></p>
-    <p style="color: red;"><%= passwordMsg %></p>
-    <p style="color: red;"><%= msg %></p>
-    <h1>Login As Admin</h1>
-    <form action="/adminLogin" method="POST">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="Enter your Email">
-        <br>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Enter your password">
-        <br>
-        <input type="submit" value="submit">
-    </form>
+
+    <div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+                <p style="text-align: center; color:red ;"><%= emailMsg %></p>
+                <p style="text-align: center; color:red ;"></p><%= passwordMsg %></p>
+                <p style="text-align: center; color:red ;"><%= msg %></p>
+                <form action="/adminLogin" method="post" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+
+                    <span class="login100-form-title">
+						Login
+					</span>
+
+                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+						<input class="input100" type="email" name="email" placeholder=" Enter your Email" id="">
+						<span class="focus-input100"></span>
+					</div>
+                    <br><br>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Please enter password">
+						<input class="input100" type="password" name="password" placeholder="Enter your Password" id="">
+						<span class="focus-input100"></span>
+					</div>
+                    <br><br>
+                    <div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+                            <input type="submit" value="submit">
+						</button>
+					</div>
+                    <div class="flex-col-c p-t-170 p-b-40">
+						
+					</div>
+                </form>
+            
+           
+			</div>
+		</div>
+	</div>
+
+
+
+
+    <!--===============================================================================================-->
+	<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/bootstrap/js/popper.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/daterangepicker/moment.min.js"></script>
+        <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+        <script src="/js/main.js"></script>
 </body>
-</html>
+</html> 
