--- a/views/school/courses/editCourse.ejs
+++ b/views/school/courses/editCourse.ejs
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,25 +7,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Course</title>
+     <!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link href="/dist/output.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/css/util.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
+
+    <!--===============================================================================================-->
 </head>
 <body>
-    <button onclick="history.back()">Go Back</button>
-    <form action="/admin/dashboard">
-        <input type="submit" value="Dashboard">
-    </form>
-    <h1>Edit This Course</h1>
 
-    <form action="/editCourse/<%= course._id %>" method="POST">
-        <label for="courseName">Update Course Name:</label>
-        <input type="text" name="courseName" value="<%= course.Name %>" id="courseName">
-        <br>
-        <label for="courseCode">Update Course Code:</label>
-        <input type="text" name="courseCode" value="<%= course.CourseCode %>" id="courseCode">
-        <br>
-        <label for="price">Update Course Price</label>
-        <input type="number" name="price" value="<%= course.Price %>" id="price">
-        <br>
-        <input type="submit" value="Update Course">
-    </form>
+    <div class="limiter">
+
+		<div class="container-login100">
+			<div class="wrap-login100">
+                <button onclick="history.back()" style="padding: 10px;"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                      </svg></button>
+                <form action="/editCourse/<%= course._id %>" method="POST" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+
+                    <span class="login100-form-title">
+					Edit Course
+					</span>
+
+                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter course name">
+						<input class="input100"type="text" name="courseName" value="<%= course.Name %>" id="courseName" placeholder="Update Course Name" required>
+						<span class="focus-input100"></span>
+					</div>
+                    <br><br>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Please enter course code">
+						<input class="input100"  type="text" name="courseCode" value="<%= course.CourseCode %>" id="courseCode" placeholder="Update Course Code" required>
+						<span class="focus-input100"></span>
+					</div>
+                    <br><br>
+                    <div class="wrap-input100 validate-input" data-validate = "Please enter course price">
+						<input class="input100" ype="number" name="price" value="<%= course.Price %>" id="price" placeholder="Update Course Price" required>
+						<span class="focus-input100"></span>
+					</div>
+                    <br><br>
+                    <div class="container-login100-form-btn" style="padding-bottom:40px ;">
+						<button class="login100-form-btn">
+                            <input type="submit" value="Update Course">
+						</button>
+					</div>
+                </form>
+            
+           
+			</div>
+		</div>
+	</div>
+
+
+
+
+    <!--===============================================================================================-->
+	<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/bootstrap/js/popper.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/daterangepicker/moment.min.js"></script>
+        <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+        <script src="/js/main.js"></script>
 </body>
-</html>
+</html> 
